Correção no form do projeto03-extra e iniciando um novo form

--- a/projeto03-extra/index.html
+++ b/projeto03-extra/index.html
@@ -21,7 +21,7 @@
         <h1>Mentoria</h1>
         <p>Preencha o formulário abaixo para agendar a sua mentoria</p>
       </header>
-      <form class="my-form">
+      <form id="my-form">
         <fieldset>
           <div class="fieldset-wrapper">
             <legend>Informações pessoais</legend>
@@ -115,7 +115,6 @@
         />
       </footer>
     </div>
-    <input type="text" mozactionhint="next" name="sometext" />
     </div>
   </body>
 </html>
