--- a/projeto03-extra01/index.html
+++ b/projeto03-extra01/index.html
@@ -25,22 +25,81 @@
           alt="Desenho de um balão vermelho com 5 estrelas e apenas 3 estão marcadas."
         />
       </header>
+
+      <h2 class="title-information">Informações pessoais</h2>
+
       <form id="my-form">
         <fieldset>
-          <div>
-            <legend>Informações Pessoais</legend>
-            <div>
-              <div>
+          <div class="fieldset-wrapper">
+            <div class="col-2">
+              <div class="input-wrapper">
                 <label for="name">Nome</label>
                 <input type="text" id="name" />
               </div>
-              <div>
+              <div class="input-wrapper">
                 <label for="lastname">Sobrenome</label>
                 <input type="text" id="lastname" />
               </div>
             </div>
+            <div class="input-wrapper inputfull">
+              <label for="email"
+                >Email <span>(digite um email válido)</span></label
+              >
+              <input type="email" id="email" />
+            </div>
           </div>
         </fieldset>
+
+        <fieldset>
+          <div class="fieldset-wrapper">
+            <legend>Informações do mentor</legend>
+            <div class="input-wrapper">
+              <label for="mentors">Selecione quem foi o seu mentor</label>
+              <select name="mentors" id="mentors">
+                <option value="" selected></option>
+                <option value="roberto">Roberto</option>
+                <option value="fulano">Fulano</option>
+                <option value="ciclano">Ciclano</option>
+              </select>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="feedback">Feedback sobre o mentor</label>
+              <textarea id="feedback" cols="30" rows="10"></textarea>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input type="checkbox" id="checkbox" />
+              <p>
+                Todas as minhas dúvidas foram esclarecidas durante a mentoria.
+              </p>
+            </div>
+          </div>
+        </fieldset>
+
+        <fieldset>
+          <div class="fieldset-wrapper">
+            <legend>Agendando próxima mentoria</legend>
+
+            <div class="col-3">
+              <div class="input-wrapper">
+                <label for="event-date">Data</label>
+                <input type="date" id="event-date" />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="event-begin">Das</label>
+                <input type="time" id="event-begin" />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="event-end">Até</label>
+                <input type="time" id="event-end" />
+              </div>
+            </div>
+          </div>
+        </fieldset>
+        <input form="my-form" class="button" type="submit" value="Salvar" />
       </form>
     </div>
   </body>
