--- a/projeto05/index.html
+++ b/projeto05/index.html
@@ -21,6 +21,7 @@
         <p>recentes</p>
         <h1>Trabalhos</h1>
       </header>
+
       <main>
         <div class="card">
           <img
@@ -42,6 +43,13 @@
             alt="Imagem de uma mesa branca, com um notebook, fone, smartphone e relogio"
           />
           <h2><span>Web Site</span> fulano.com</h2>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1555617766-c94804975da3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            alt="Imagem de uma placa mãe de um computador de mesa(desktop) mostrando com ênfase o processador que fica ao meio da placa. "
+          />
+          <h2><span>Assistência</span> para você</h2>
         </div>
       </main>
     </div>
