--- a/projeto05-extra/index.html
+++ b/projeto05-extra/index.html
@@ -8,17 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Cream</title>
 
-    <link rel="stylesheet" href="./style/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Palanquin&family=Roboto&family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div class="page">
       <header>
         <img src="./assets/logo.svg" alt="Desenho de um sorvete" />
         <span><h1>Space Cream</h1></span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
+          quam aliquet, pharetra est in, sagittis lorem.elit. Donec a rhoncus
+          leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
+          dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
+          aliquet, pharetra est in, sagittis lorem.
+        </p>
       </header>
       <main>
         <p>
@@ -57,6 +66,23 @@
             />
             <div><h2>Picolés</h2></div>
           </div>
+          <div class="ice-cream">
+            <img
+              src="./assets/sorvete1.svg"
+              alt="Imagem de três sorvetes empilhados"
+            />
+            <div><h2>Paletas</h2></div>
+          </div>
+          <div class="ice-cream">
+            <img
+              src="./assets/sorvete4.svg"
+              alt="Imagem de um sorvete de palito "
+            />
+            <div><h2>Picolés</h2></div>
+          </div>
+        </div>
+        <div class="contact">
+          <span>fale concosco no instagram <strong>@space_cream</strong></span>
         </div>
       </main>
     </div>
