Finalizado projet05-extra com responsividade

--- a/projeto05-extra/index.html
+++ b/projeto05-extra/index.html
@@ -8,18 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Cream</title>
 
+    <link rel="stylesheet" href="./style/style.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Palanquin&family=Roboto&family=Staatliches&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div class="page">
       <header>
-        <img src="./assets/logo.svg" alt="Desenho de um sorvete" />
-        <span><h1>Space Cream</h1></span>
-        <p>
+        <img
+          src="./assets/logo.svg"
+          alt="Desenho de um sorvete sendo representado como o logo"
+        />
+        <div class="box-title">
+          <p>Space cream</p>
+        </div>
+        <div class="box-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
           rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
           erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
@@ -27,62 +33,81 @@
           leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
           dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
           aliquet, pharetra est in, sagittis lorem.
-        </p>
+        </div>
       </header>
       <main>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
-          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
-          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
-          quam aliquet,
-        </p>
-
+        <div class="box-paragraph">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+            rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+            erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent
+            at quam aliquet,
+          </p>
+        </div>
         <div class="ice-cream-box">
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete1.svg"
-              alt="Imagem de três sorvetes empilhados"
-            />
-            <div><h2>Paletas</h2></div>
+          <div class="group-item1">
+            <div class="ice-item order1">
+              <img
+                src="./assets/sorvete1.svg"
+                alt="Foto de 3 paletas de sorvetes empilhados em cima de uma mesa com amora e folhas em volta"
+              />
+              <div>
+                <p>Paletas</p>
+              </div>
+            </div>
+            <div class="ice-item order2">
+              <img
+                src="./assets/sorvete2.svg"
+                alt="Foto de um copo de vidro com sorvete ate o maximo suportado e varias frutas voando como detalhes"
+              />
+              <div>
+                <p>Shakes</p>
+              </div>
+            </div>
           </div>
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete2.svg"
-              alt="Imagem de um sorvete de copo com frutas voando"
-            />
-            <div><h2>Shakes</h2></div>
+          <div class="group-item2">
+            <div class="ice-item">
+              <img
+                src="./assets/sorvete1.svg"
+                alt="Foto de 3 paletas de sorvetes empilhados em cima de uma mesa com amora e folhas em volta"
+              />
+              <div>
+                <p>Paletas</p>
+              </div>
+            </div>
+            <div class="ice-item">
+              <img
+                src="./assets/sorvete4.svg"
+                alt="Foto de uma mão segurando um sorvete de palito"
+              />
+              <div>
+                <p>Picolés</p>
+              </div>
+            </div>
           </div>
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete3.svg"
-              alt="Imagem de uma colher cheio do sorvete"
-            />
-            <div><h2>Massas</h2></div>
-          </div>
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete4.svg"
-              alt="Imagem de um sorvete de palito "
-            />
-            <div><h2>Picolés</h2></div>
-          </div>
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete1.svg"
-              alt="Imagem de três sorvetes empilhados"
-            />
-            <div><h2>Paletas</h2></div>
-          </div>
-          <div class="ice-cream">
-            <img
-              src="./assets/sorvete4.svg"
-              alt="Imagem de um sorvete de palito "
-            />
-            <div><h2>Picolés</h2></div>
+          <div class="group-item3">
+            <div class="ice-item">
+              <img
+                src="./assets/sorvete3.svg"
+                alt="Foto de uma colher preta cheia de sorvete, com um fundo roxo"
+              />
+              <div>
+                <p>Massas</p>
+              </div>
+            </div>
+            <div class="ice-item">
+              <img
+                src="./assets/sorvete4.svg"
+                alt="Foto de uma mão segurando um sorvete de palito"
+              />
+              <div>
+                <p>Picolés</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="contact">
-          <span>fale concosco no instagram <strong>@space_cream</strong></span>
+        <div class="box-contact">
+          <p>fale concosco no instagram <strong>@space_cream</strong></p>
         </div>
       </main>
     </div>
