--- a/projeto06/index.html
+++ b/projeto06/index.html
@@ -17,19 +17,20 @@
   </head>
   <body>
     <main>
-      <div class="screen1 hide">
+      <div class="screen1">
         <h1>Jogo da Adivinhação</h1>
         <p>Adivinhe um número entre 0 e 10</p>
 
         <form>
-          <input type="number" />
-          <button>Tente</button>
+          <input id="inputNumber" type="number" />
+          <button id="btnTry">Tentar</button>
         </form>
       </div>
-      <div class="screen2">
-        <h2>Acertou em 3 vezes</h2>
-        <button>Jogar novamente</button>
+      <div class="screen2 hide">
+        <h2></h2>
+        <button id="btnReset">Jogar novamente</button>
       </div>
     </main>
+    <script src="./js/main.js"></script>
   </body>
 </html>
