--- a/projeto07/index.html
+++ b/projeto07/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <script src="./js/main.js" defer></script>
+    <script src="./js/main.js" defer type="module"></script>
   </head>
   <body>
     <div class="alert-error">Digite somente números</div>
@@ -28,7 +28,7 @@
           </div>
 
           <div class="input-wrapper">
-            <label for="height">Altura (m)</label>
+            <label for="height">Altura (cm)</label>
             <input id="height" type="text" placeholder="165" />
           </div>
 
@@ -44,13 +44,15 @@
     </div>
     <div class="modal-wrapper">
       <div class="modal card">
-        <button class="close">
-          <img
-            src="./assets/close.svg"
-            alt="Desenho de um x, representando um atalho para fechar o popup"
-          />
-        </button>
-        <h2 class="title">O Seu IMC é de 28</h2>
+        <h2 class="title">
+          <button class="close">
+            <img
+              src="./assets/close.svg"
+              alt="Desenho de um x, representando um atalho para fechar o popup"
+            />
+          </button>
+          <span>O Seu IMC é de 28</span>
+        </h2>
       </div>
     </div>
   </body>
